[gd_scene load_steps=16 format=3 uid="uid://q78bis70siql"]

[ext_resource type="Script" path="res://Scripts/main.gd" id="1_4xvcx"]
[ext_resource type="PackedScene" uid="uid://bv0i7hej2qyog" path="res://Scenes/checkpoint.tscn" id="5_nkqer"]
[ext_resource type="PackedScene" uid="uid://c3ixqkc6k13yi" path="res://addons/gevp/scenes/vehicle_controller.tscn" id="5_s7dyk"]
[ext_resource type="PackedScene" uid="uid://fo6kt54q87tf" path="res://addons/gevp/scenes/arcade_car.tscn" id="5_xd0wm"]
[ext_resource type="PackedScene" uid="uid://dvpyel7aa8wsv" path="res://Buildings/ground_floor_3x3.tscn" id="7_xqsnh"]
[ext_resource type="PackedScene" uid="uid://che7bx5v08gap" path="res://Scenes/hud.tscn" id="8_lsuvu"]
[ext_resource type="PackedScene" uid="uid://c2f46kgub66ia" path="res://Buildings/middle_flor_3x_3.tscn" id="8_yp1fr"]
[ext_resource type="PackedScene" uid="uid://d0xwfplcwvbba" path="res://Assets/Wall.glb" id="9_n2oi2"]
[ext_resource type="Script" path="res://Scripts/smooth_camera.gd" id="9_twnrq"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tquo6"]
albedo_color = Color(0.0146913, 0.0140742, 0.0145446, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_10b2l"]
albedo_color = Color(0.391185, 0.391185, 0.391185, 1)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_4ub80"]
friction = 0.15
bounce = 0.15

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bhu52"]
albedo_color = Color(1, 0.54902, 0.415686, 1)

[sub_resource type="SphereMesh" id="SphereMesh_4h2nd"]
material = SubResource("StandardMaterial3D_bhu52")
radius = 0.06
height = 0.1

[sub_resource type="Gradient" id="Gradient_xlbux"]
colors = PackedColorArray(1, 0, 0, 1, 1, 0.784314, 0.403922, 1)

[node name="Main" type="Node3D"]
script = ExtResource("1_4xvcx")

[node name="Map" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0)

[node name="CSGBox3D" type="CSGBox3D" parent="Map"]
use_collision = true
size = Vector3(100, 0.5, 100)
material = SubResource("StandardMaterial3D_tquo6")
metadata/_edit_lock_ = true

[node name="Roads" type="Node3D" parent="Map"]

[node name="CSGBox3D2" type="CSGBox3D" parent="Map/Roads"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)
size = Vector3(100, 0.15, 6)
material = SubResource("StandardMaterial3D_10b2l")

[node name="CSGBox3D3" type="CSGBox3D" parent="Map/Roads"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0.2, 0)
size = Vector3(100, 0.15, 6)
material = SubResource("StandardMaterial3D_10b2l")

[node name="CSGBox3D5" type="CSGBox3D" parent="Map/Roads"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 30, 0.2, 0)
size = Vector3(100, 0.15, 6)
material = SubResource("StandardMaterial3D_10b2l")

[node name="CSGBox3D4" type="CSGBox3D" parent="Map/Roads"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -28, 0.2, 0)
size = Vector3(100, 0.15, 6)
material = SubResource("StandardMaterial3D_10b2l")

[node name="Buildings" type="Node3D" parent="Map"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, -1, 0, 0)

[node name="MiddleFlor3x3" parent="Map/Buildings" instance=ExtResource("8_yp1fr")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -2, 1.125, -2.5)

[node name="GroundFloor3x3" parent="Map/Buildings" instance=ExtResource("7_xqsnh")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -2, 0.125, -2.5)

[node name="MiddleFlor3x4" parent="Map/Buildings" instance=ExtResource("8_yp1fr")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 4, 1.125, 11)

[node name="GroundFloor3x4" parent="Map/Buildings" instance=ExtResource("7_xqsnh")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 4, 0.125, 11)

[node name="MiddleFlor3x5" parent="Map/Buildings" instance=ExtResource("8_yp1fr")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 4, 1.125, 7.5)

[node name="GroundFloor3x5" parent="Map/Buildings" instance=ExtResource("7_xqsnh")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 4, 0.125, 7.5)

[node name="MiddleFlor3x6" parent="Map/Buildings" instance=ExtResource("8_yp1fr")]
transform = Transform3D(0.433013, 0, 0.25, 0, 0.5, 0, -0.25, 0, 0.433013, 4, 1.125, 3.5)

[node name="GroundFloor3x6" parent="Map/Buildings" instance=ExtResource("7_xqsnh")]
transform = Transform3D(0.433013, 0, 0.25, 0, 0.5, 0, -0.25, 0, 0.433013, 4, 0.125, 3.5)

[node name="MiddleFlor3x7" parent="Map/Buildings" instance=ExtResource("8_yp1fr")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 4, 1.125, 14.5)

[node name="GroundFloor3x7" parent="Map/Buildings" instance=ExtResource("7_xqsnh")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 4, 0.125, 14.5)

[node name="Wall2" parent="Map/Buildings" instance=ExtResource("9_n2oi2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 25, -24.5, 0.125, 0)

[node name="Wall3" parent="Map/Buildings" instance=ExtResource("9_n2oi2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 25, 25.5, 0.125, 0)

[node name="Wall4" parent="Map/Buildings" instance=ExtResource("9_n2oi2")]
transform = Transform3D(-4.37114e-08, 0, -25, 0, 1, 0, 1, 0, -1.09278e-06, 0.5, 0.125, -25)

[node name="Wall5" parent="Map/Buildings" instance=ExtResource("9_n2oi2")]
transform = Transform3D(1.31134e-07, 0, 25, 0, 1, 0, -1, 0, 3.27835e-06, 0.5, 0.125, 25)

[node name="Checkpoints" type="Node3D" parent="Map"]

[node name="Easy1" parent="Map/Checkpoints" instance=ExtResource("5_nkqer")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -14, 0.685113, 20.5436)
total_time = 8.0

[node name="End" parent="Map/Checkpoints/Easy1" instance=ExtResource("5_nkqer")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14, 0, -43)
script = null

[node name="Easy2" parent="Map/Checkpoints" instance=ExtResource("5_nkqer")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -23, 0.685113, -0.4564)
total_time = 7.0

[node name="End" parent="Map/Checkpoints/Easy2" instance=ExtResource("5_nkqer")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 37, 0, -23)
script = null

[node name="Easy3" parent="Map/Checkpoints" instance=ExtResource("5_nkqer")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14, 0.685113, 20.5436)
total_time = 9.0

[node name="End" parent="Map/Checkpoints/Easy3" instance=ExtResource("5_nkqer")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -14, 0, 1)
script = null

[node name="Camera3D" type="Camera3D" parent="." node_paths=PackedStringArray("target")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 7.97227, 0)
current = true
script = ExtResource("9_twnrq")
target = NodePath("../VehicleController2/VehicleRigidBody")

[node name="VehicleController2" parent="." node_paths=PackedStringArray("vehicle_node") instance=ExtResource("5_s7dyk")]
vehicle_node = NodePath("VehicleRigidBody")

[node name="VehicleRigidBody" parent="VehicleController2" instance=ExtResource("5_xd0wm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0277321, 0)
physics_material_override = SubResource("PhysicsMaterial_4ub80")
throttle_speed = 60.0
shift_time = 0.0
vehicle_mass = 1000.0
center_of_gravity_height_offset = -0.3

[node name="CPUParticles3D" type="CPUParticles3D" parent="VehicleController2/VehicleRigidBody"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.424583, 0.239263, 1.28995)
visible = false
amount = 6
lifetime = 0.03
explosiveness = 0.22
randomness = 0.44
mesh = SubResource("SphereMesh_4h2nd")
spread = 48.64
gravity = Vector3(0, 0, 0)
initial_velocity_min = 1.0
initial_velocity_max = 2.0
color_ramp = SubResource("Gradient_xlbux")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.258819, 0.965926, 0, -0.965926, 0.258819, 0, 150, 44)
shadow_enabled = true

[node name="HUD" parent="." instance=ExtResource("8_lsuvu")]

[connection signal="checkpoint_entered" from="Map/Checkpoints/Easy1" to="." method="_on_checkpoint_checkpoint_entered"]
[connection signal="checkpoint_won" from="Map/Checkpoints/Easy1" to="." method="_on_easy_1_checkpoint_won"]
[connection signal="body_entered" from="Map/Checkpoints/Easy1/End" to="Map/Checkpoints/Easy1" method="_on_end_body_entered"]
[connection signal="checkpoint_entered" from="Map/Checkpoints/Easy2" to="." method="_on_checkpoint_checkpoint_entered"]
[connection signal="checkpoint_won" from="Map/Checkpoints/Easy2" to="." method="_on_easy_1_checkpoint_won"]
[connection signal="body_entered" from="Map/Checkpoints/Easy2/End" to="Map/Checkpoints/Easy2" method="_on_end_body_entered"]
[connection signal="checkpoint_entered" from="Map/Checkpoints/Easy3" to="." method="_on_checkpoint_checkpoint_entered"]
[connection signal="checkpoint_won" from="Map/Checkpoints/Easy3" to="." method="_on_easy_1_checkpoint_won"]
[connection signal="body_entered" from="Map/Checkpoints/Easy3/End" to="Map/Checkpoints/Easy3" method="_on_end_body_entered"]
